# NeuralNetwork

./: .gitignore  1.py  README.md  best_model_cnn.keras  requirements.txt
temperature_forecasting/: 1.py  README.md  check_import_path.py  debug_import.py  logging_config.py  main.py  pyproject.toml
temperature_forecasting/src/: 验证集.py
temperature_forecasting/src/evaluation/: __init__.py  metrics.py  (+2 more)
temperature_forecasting/tests/: HandleExtreCategoricalFeatures.py  HandleExtreNumericFeatures.py  ProcessNumericColumns.py  activate  conftest.py  pytest.ini  test_check_extre_features.py  test_convert_categorical_features.py  test_convert_numeric_features.py  test_data_sampling_func.py  test_data_sampling_integrations.py  test_data_sampling_unit.py  test_data_scaling_func.py  test_data_scaling_integrations.py  test_data_scaling_unit.py  test_data_splitting_datasets_units_integrations_funcs.py  test_feature_generation_from_numeric.py  test_feature_generation_from_time.py  test_feature_selection.py  test_feature_selector.py  test_features_selector.py  test_handle_extre_categorical_features.py  test_handle_extre_numeric_features.py  test_handle_missing_values.py  test_process_categorical_columns.py  test_process_other_columns.py  test_processs_timeseries_columns.py  test_remove_duplicates.py  test_sampling_func.py  test_sampling_integrations.py  test_sampling_unit.py  test_scalers_func.py  test_scalers_integration.py  test_scalers_integrations.py  test_scalers_unit.py  test_split_datasets_units_integrations_funcs.py
temperature_forecasting/trained/: __init__.py
(+44 files in other folders)
